# bazel_stamp_examples

./: .gitignore  README.md  version.sh
1-go/: BUILD.bazel  go.mod  version.sh
1-go-x_defs/: README.md  version.sh
1-go-x_defs/cmd/: BUILD.bazel  main.go
1-go-x_defs/internal/version/: BUILD.bazel  version.go
1-go/cmd/: BUILD.bazel  main.go
1-go/internal/version/: version.go
cpp_generate/: README.md
cpp_generate/lib/: BUILD.bazel  gen_version.sh  version.cc  version.h
cpp_generate/main/: BUILD.bazel  cpp-generate.cc
cpp_linkstamp/: README.md  version-linkstamp.sh
cpp_linkstamp/lib/: BUILD.bazel  version-linkstamp.cc  version.cc
cpp_linkstamp/main/: BUILD.bazel
go_generate/: BUILD.bazel  README.md  WORKSPACE  go.mod
go_generate/cmd/generate_version/: BUILD.bazel  main.go
go_generate/cmd/go_generate/: BUILD.bazel  main.go
go_generate/internal/version/: BUILD.bazel
go_x_defs/: BUILD.bazel  README.md  go.mod
go_x_defs/cmd/: BUILD.bazel  main.go
go_x_defs/cmd/go_x_defs/: BUILD.bazel
go_x_defs/internal/version/: BUILD.bazel
