load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/andrewg-spectra/bazel_stamp_examples/1-go/cmd",
    visibility = ["//visibility:private"],
    deps = ["//internal/version:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {"github.com/andrewg-spectra/bazel_stamp_examples/1-go/internal/version.Version": "{BUILD_VERSION}"},
)
