load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/andrewg-spectra/bazel_stamp_examples/go_generate/cmd/go_generate",
    visibility = ["//visibility:private"],
    deps = ["//internal/version:go_default_library"],
)

go_binary(
    name = "go_generate",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
